--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
             overflow-y: auto; 
             position: relative; 
         }
-        #app::before {
-            content: '';
-            position: fixed; 
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('ega-watermark.png'); 
-            background-repeat: repeat; 
-            background-size: 200px; 
-            background-position: center; 
-            opacity: 0.1; 
-            z-index: -1; 
-        }
+#app::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('ega-watermark.png');
+    background-repeat: no-repeat; /* Changed from repeat to no-repeat */
+    background-size: contain; /* Scales the image to fit within the container while maintaining aspect ratio */
+    background-position: center; /* Centers the image */
+    opacity: 0.3; /* Adjust as needed for visibility */
+    z-index: -1;
+}
         #app > .screen { 
             position: relative; 
             background: rgba(255, 255, 255, 0.8); 
